# GreenPass_PerrottaRuggiero

./: .gitignore  CMakeLists.txt
src/: GreenPassUtility.c  GreenPassUtility.h  Makefile  NetWrapper.c  NetWrapper.h  UsageUtility.c  UsageUtility.h  WrapperFunction.c  WrapperFunction.h  centroVaccinale  centroVaccinale.c  centroVaccinale.h  clientCitizen  clientCitizen.c  clientCitizen.h  clientS  clientS.c  clientS.h  clientT  clientT.c  clientT.h  clientUtente  clientUtente.c  clientUtente.h  serverG  serverG.c  serverG.h  serverV  serverV.c  serverV.h
